Add getting errands from Express backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,5 +39,6 @@
   "devDependencies": {
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.23.2"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
