--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "joi": "^17.4.0",
     "mongoose": "^5.12.12",
     "nodemon": "^2.0.7"
   }
