--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
