--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "concurrently": "^6.2.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
